--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ homework 2/cifar10/cifar-10-batches-py/data_batch_3
 homework 2/cifar10/cifar-10-batches-py/data_batch_2
 homework 2/cifar10/cifar-10-batches-py/data_batch_1
 homework 2/cifar10/cifar-10-batches-py/batches.meta
+homework 3/cifar10/cifar-10-batches-py/batches.meta
+homework 3/cifar10/cifar-10-batches-py/data_batch_1
+homework 3/cifar10/cifar-10-batches-py/data_batch_2
+homework 3/cifar10/cifar-10-batches-py/data_batch_3
+homework 3/cifar10/cifar-10-batches-py/data_batch_4
+homework 3/cifar10/cifar-10-batches-py/data_batch_5
+homework 3/cifar10/cifar-10-batches-py/test_batch
